fixes alignment issues with navigation of submenu

--- a/style.css
+++ b/style.css
@@ -112,26 +112,11 @@ header ul li a:hover {
 	z-index: 1;
   	background-color: white;
 	opacity: 0;
-	/* right: 9999rem; */
+	right: 9999rem;
 	top: calc(100% - 12px);
 	transition: opacity .15s linear, transform .15s linear;
-	transform: translateY(calc(var(--base-rhythm-value) - 14px ));
+	transform: translateY(var(--base-rhythm-value));
 }
-/* .sub-menu:before {
-	content: "";
-	display: block;
-	position: absolute;
-	bottom: 100%;
-	height: 2rem;
-	left: 0;
-	right: 0;
-}
-.sub-menu:after {
-	content: "";
-	display: block;
-	position: absolute;
-	bottom: 100%;
-} */
 
 .sub-menu li {
 	display: block;
@@ -151,17 +136,52 @@ header ul li a:hover {
 	left: -20px;
  	font-style: normal;
 }
+/* Filter Styling*/
+.js-filters.sub-menu {
+	transform: translateY(0);
+}
+
+.js-filters.sub-menu.show {
+	display: block;
+	opacity: 1;
+}
+
+a.filter__link {
+	display: block;
+}
+
+a.filter__link:before {
+	display: inline-block;
+	content: " ";
+	font-size: 75%;
+	width: 23px;
+	height: 100%;
+	line-height: 32px;
+	top: 0px;
+	position: relative;
+}
+
+a.filter__link.active:before {
+	content: "×";
+}
+
+a.clear-active {
+	display: block;
+	padding: 20px 0;
+}
 
 span.mobile-menu {
 	display: none;
 }
 
 .main-menu__item:hover .sub-menu {
-	position: absolute;
+	position: relative;
+	right: 0px;
+	margin-left: 21px;
 	display: block;
 	z-index: 1;
 	opacity: 1;
-	transition: opacity .15s linear,transform .15s linear;
+	transition: opacity .15s linear, transform .15s linear;
 }
 
 main {
@@ -243,33 +263,6 @@ p.project-detail-meta-info {
 	align-items: initial !important;
 }
 
-/* Filter Styling*/
-.js-filters.sub-menu.show {
-	display: block;
-	opacity: 1;
-}
-a.filter__link {
-	display: block;
-}
-a.filter__link:before {
-	display: inline-block;
-	content: " ";
-	width: 22px;
-	line-height: calc(var(--base-rhythm-value) + 8px);
-	top: -3px;
-	position: relative;
-}
-
-a.filter__link.active:before {
-	content: "×";
-    font-style: normal;
-    font-size: 75%;
-}
-
-a.clear-active {
-    display: block;
-    padding: 20px 0;
-}
 
 .leftover-projects {
     position: absolute;
